<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_inspection"
            android:icon="@drawable/ic_near_me"

            android:title="@string/drawer_item_1" />
        <item
            android:id="@+id/nav_recent_visits"
            android:icon="@drawable/ic_search"
            android:title="@string/drawer_item_2" />
    </group>

    <item android:title="@string/drawer_item_3">
        <menu>

            <item
                android:id="@+id/upload"
                android:icon="@drawable/ic_cloud_upload"
                android:title="@string/drawer_item_3_menu_item_1" />

            <item
                android:id="@+id/download"
                android:icon="@drawable/ic_cloud_download"
                android:title="@string/drawer_item_4_menu_item_1" />

        </menu>
    </item>

</menu>
